--- a/동적사이트 크롤링.ipynb
+++ b/동적사이트 크롤링.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# !pip install undetected-chromedriver\n",
     "\n",
-    "# Selenium : 수집용, 매크로\n",
+    "# Selenium : 수집용, 매크로!!!!!!!!!!!\n",
     "import undetected_chromedriver as uc\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
